# mudconsole

./: .gitignore  README.md  pyproject.toml
src/mudconsole/: __init__.py
